interpreter/tests/test_files/neg/bad_flow_locality.s
	mov r1 pc
	;; Cannot restrict Local to Global
	restrict r1 RWX LOCAL
	restrict r1 RWX GLOBAL
	halt
